homeworks/step_final/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: app
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
