homeworks/step_final/src/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app.danit.devops9.test-danit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 80
